--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       body {
       pading-top: 20px;
-      padding-bottom: 40px;
+      pading-bottom: 40px;
       }
       .container {
         width: 960px;
@@ -38,7 +38,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row navitation">
+      <div class="row navigation">
 	<div class="span2 logo">
 	  Logo
 	</div>
@@ -49,25 +49,24 @@
 	  About
 	</div>
       </div>
-    </div>
-    <div class="row heading">
-      <div class="span12">
-	<h1>Bitstarter Title</h1>
-      </div>
-    </div>
-    <div class="row subheading">
-      <div class="span12">
-	<p class="lead">This is my first bitstarter project.</p>
-      </div>
-    </div>
-    <div class="row pitch">
-      <div class="span6 video">
-	Video
-      </div>
-      <div class="span6">
-	<div class="thermometer">
-	  Thermometer
+      <div class="row heading">
+	<div class="span12">
+	  <h1>Bitstarter Title</h1>
 	</div>
+      </div>
+      <div class="row subheading">
+	<div class="span12">
+	  <p class="lead">This is my first bitstarter project.</p>
+	</div>
+      </div>
+      <div class="row pitch">
+	<div class="span6 video">
+	  Video
+	</div>
+	<div class="span6">
+	  <div class="thermometer">
+	    Thermometer
+	  </div>
 	<div class="order">
 	  Order
 	</div>
