--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
       body {
-      pading-top: 20px;
-      pading-bottom: 40px;
+      padding-top: 20px;
+      padding-bottom: 40px;
       }
       .container {
         width: 960px;
